# searchstims

./: .gitignore  .travis.yml  MANIFEST.in  README.md  config.ini  environment.yml  pyproject.toml  script.py  setup.cfg  setup.py
.github/workflows/: ci.yml
doc/: CHANGELOG.md  config.ini  config.md  json.md
doc/configs/: basic_config.ini  config_feature_alexnet.ini  config_feature_spatial_vgg16.ini  config_feature_vgg16.ini  config_spatial_config_alexnet.ini  config_spatial_config_vgg16.ini  number_config.ini  numtest.ini  rectangle_config.ini  rectangle_config2.ini
src/searchstims/: __about__.py  __init__.py  config.py  default.ini  main.py  make.py  stim_makers.py  types.ini  utils.py
src/searchstims/config/: classes.py  default.ini  parse.py  types.ini
src/searchstims/png/: two_red-20180827-212155.piskel
src/searchstims/stim_makers/: RVvGVStimMaker.py  RVvRHGVStimMaker.py  TLStimMaker.py  TStimMaker.py  Two_v_Five_StimMaker.py  __init__.py  abstract_stim_maker.py  stim_makers.py  xoStimMaker.py
src/searchstims/ttf/: FORCEDSQUARE-README.txt
src/searchstims/voc/: __init__.py  object.py  writer.py
tests/: test_config.py  test_main.py  test_make.py  test_scripts.py  test_utils.py
tests/fixtures/: __init__.py  configs.py  paths.py
tests/test_data/configs/: basic_config.ini  test_2_v_5_config.ini  (+6 more)
tests/test_voc/: test_object.py
visualsearchstim/: utils.py
visualsearchstim/png/: five_green-20180828-163325.piskel  five_red-20180828-162938.piskel  five_white-20180828-180049.piskel  two_green-20180827-211902.piskel  two_white-20180828-180128.piskel
(+1 files in other folders)
